--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -1,9 +1,19 @@
 @import "my-variables";
 
+* {
+    box-sizing: border-box;
+    font-family: inherit;
+}
+
 html, body {
     height: 100%;
     margin: 0;
     background: $body-background;
+}
+
+.relative-wrapper {
+    width: 100%;
+    position: relative;
 }
 
 
@@ -22,10 +32,10 @@ main {
     .tab {
         display: none;
         background-color: #e7e7e7;
-    }
 
-    .tab.active {
-        display: block;
+        &.active {
+            display: block;
+        }
     }
 }
 
