--- a/src/css/my-variables.scss
+++ b/src/css/my-variables.scss
@@ -5,7 +5,7 @@
 //== Layout
 $container-width:       700px;
 $header-padding:        15%;
-$footer-height:         100px;
+$footer-height:         150px;
 $footer-height-sm:      250px;
 
 // todo: figure out why $primary isn't importing properly into Cutestrap (see radio buttons and btn hover for examples of inconsistency)
